@@ -64,12 +64,39 @@ if ($searchModules) {
 			INNER JOIN tagente_estado AS t4
 				ON t4.id_agente_modulo = t1.id_agente_modulo
 		WHERE (t2.id_grupo IN (
-				SELECT id_grupo 
-				FROM tusuario_perfil 
-				WHERE id_usuario = "' . $config['id_user'] . '" 
-					AND id_perfil IN (
-						SELECT id_perfil 
-						FROM tperfil WHERE agent_view = 1
+					SELECT id_grupo
+					FROM tgrupo 
+					WHERE id_grupo IN (
+							SELECT id_grupo 
+							FROM tusuario_perfil 
+							WHERE id_usuario = "' . $config['id_user'] . '" 
+								AND id_perfil IN (
+									SELECT id_perfil 
+									FROM tperfil WHERE agent_view = 1
+								)
+						)
+						OR (
+							parent IN (
+								SELECT id_grupo 
+								FROM tusuario_perfil 
+								WHERE id_usuario = "' . $config['id_user'] . '" 
+									AND id_perfil IN (
+										SELECT id_perfil 
+										FROM tperfil WHERE agent_view = 1
+									)
+							) AND 1 = (
+								SELECT propagate
+								FROM tgrupo
+								WHERE id_grupo IN (
+									SELECT id_grupo 
+									FROM tusuario_perfil 
+									WHERE id_usuario = "' . $config['id_user'] . '" 
+										AND id_perfil IN (
+											SELECT id_perfil 
+											FROM tperfil WHERE agent_view = 1
+										)
+								)
+							)
 					)
 				)
 				OR 0 IN (
