@@ -1,3 +1,11 @@
+2011-02-18 Miguel de Dios  <miguel.dedios@artica.es>
+
+	Merged bugfix from trunk.
+
+	* include/functions_db.php, operation/search_modules.php,
+	operation/search_agents.php: fixed SQL querys, this querys in previous
+	version haven't lines SQL code for to search into subgroups.
+
 2011-02-18 Javier Lanz <javier.lanz@artica.es>
 
 	* operation/servers/view_server.php: Fixed ACL permissions
